--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,7 +12,7 @@
 <p><label for="password_confirmation">Confirm Password</label><br/>
 <%= f.password_field :password_confirmation %></p>
 
-p><label for="photo">Upload Photo</label><br/>
+<p><label for="photo">Upload Photo</label><br/>
 <%= f.file_field :photo%></p>
 
 <p><%= submit_tag 'Sign up' %></p>
