--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,61 +2,69 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title><%= @pagetitle %></title>
 		<%= stylesheet_link_tag 'SmothRunning' %>
 		<%= javascript_include_tag :defaults %>
-		
   </head>
   <body bgcolor="#000000">
 	<div id='pagewrapper'>
-		<div id='header' >
- 	 		 <div style="background-color:#44d8f6; width:auto; height:95px;  "><img src="SmoothRunning2.gif"  /></div>
- 			  <div style="background-color:#33cc33; width:auto; height:37px; font-family:arial; font-size:30px; color:#ffffff; text-align:center;">walk... to run... to live...
+	   <div id='header1'>
+		 <div id='header'>
+ 	 		<div id='user' >  
  			  <% if logged_in? %>
- 			       	<%= @current_user.login %>
-              <% end %>	
- 			   </div>
-       	</div>
-		<div id='navbar'>
-    		<ul>
-        		<% @tabs.each do |page| -%>
-            	<li <%= "id='current'" if @page && (@page == page || @page.parent == page ) %>>
+ 			       	Welcome <%= @current_user.login.camelize %>  to
+ 		   	  <% end -%>
+ 		    </div>
+        	<div id="log"> 
+ 		     <% if logged_in? %>
+ 		       <%= link_to "Log Out", logout_path %>
+ 			 <% else %>    	
+ 			 	  <%= link_to "Log In", login_path %> 	  
+              <% end -%>
+             </div>
+ 		 </div>
+       </div>
+    
+	<div id='navbar' style="text-align:center">
+		<ul>
+    		<% @tabs.each do |page| -%>
+            	<li <%= "style='background-color:#{page.navcolor}'" %>
+            	<%= "id='current' "  if @page && (@page == page || @page.parent == page )  %>>	
             	<% if page.redirect? %>
  			 	<%= link_to page.navlabel, :action => page.action_name, :controller => page.controller_name, :name => page.name %>
 				<% else %>
-				  <%= link_to page.navlabel, view_page_path(page.name) %>
-				<% end %>
-         	   </li>
-        		<% end -%>
-        <li><% if logged_in? %>
-                    <%= link_to "Log Out", logout_path %>
-                <% else %>
-                    <%= link_to "Log In", login_path %>
-                <% end %>
-        </li>
-        <li><% if logged_in? 
-                  if @current_user.admin_user? %>
-                    <%= link_to "Maintain Programs", programs_path %>
-                   <% else %>
-                    <%= link_to "My Programs", programs_path %>
-                   <% end %>
-                <% end %>
-        </li>
-        <li><% if logged_in?
-                  if @current_user.admin_user? %>
-                    <%= link_to "Maintain Exercises", target_muscles_path %>
-                  <% end %>
-              <% end %>
-        </li>
-      </ul>
+				  <%= link_to page.navlabel, view_page_path(page.name)  %>
+				<% end -%>
+         	    </li>
+    		<% end -%>
+        </ul>
 	</div>
+	<div id='adminnavbar'>
+		<% if logged_in? and @current_user.admin_user? %>
+		    <ul>
+        		<% @admintabs.each do |page| -%>
+	            	<li <%= "id='current'" if @page && (@page == page || @page.parent == page ) %>>
+	            	<% if page.redirect? %>
+		 			 	<%= link_to page.navlabel, :action => page.action_name, :controller => page.controller_name, :name => page.name %>
+						<% else %>
+						  <%= link_to page.navlabel, view_page_path(page.name) %>
+						<% end -%>
+	         	    </li>
+        		<% end -%>
+      	   </ul>
+         <% end -%> 
+	</div>
+	
 	<div id='content'>
 		<%= flash[:notice] %>
-      <%= yield %>
+      <%= yield -%>
 	</div>
 	<div id='footer'>
-		<p>Smooth Running Application</p>
+		<p>Contact Amanda at Smooth Running on 0412 489 963</p>
+	</div>
+	</div>
+		
 	</div>
   </body>
 </html>
