--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-%= error_messages_for :user %>
+<%= error_messages_for :user %>
 <% form_for @user, :html => { :multipart => true } do |f| -%>
 <p><label for="login">Login</label><br/>
 <%= f.text_field :login %></p>
